--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -228,7 +228,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 99991;
   box-shadow: 0px 0px 10px rgba($color: #E0D4BE, $alpha: 0.4);
   transition: all .3s linear;
 
@@ -835,6 +835,10 @@ header {
 }
 
 .products {
+  position: unset !important;
+  z-index: unset !important;
+  overflow: hidden;
+
   .swiper-wrapper {
     padding: 10px 0px 40px 0px;
   }
@@ -1024,6 +1028,28 @@ header {
       .contain {
         width: calc(100% - 162px);
       }
+    }
+  }
+
+
+  .close-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: var(--secondary-color);
+    display: none;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 9;
+
+    img {
+      width: 24px;
+      height: 24px;
+      object-fit: contain;
     }
   }
 }
@@ -2633,6 +2659,7 @@ footer {
 
 .profile {
   background-color: #f8f8f8;
+  position: unset !important;
 
   .filter-icon {
     width: 40px;
@@ -2641,6 +2668,7 @@ footer {
     z-index: 99;
     display: none;
     align-items: center;
+    border-radius: 4px;
     align-content: center;
     justify-content: center;
 
@@ -2651,6 +2679,7 @@ footer {
     }
   }
 
+  .profile-mobile-view,
   .profile-card {
     width: 100%;
     padding: 20px 15px;
@@ -2905,6 +2934,65 @@ footer {
           }
         }
       }
+    }
+  }
+
+  .profile-mobile-view {
+    position: fixed;
+    display: none;
+    top: 0px;
+    right: -100%;
+    z-index: 9999999 !important;
+    overflow-y: scroll;
+    height: 100vh !important;
+    background-color: var(--light-color);
+    transition: all .3s linear;
+
+    &.active-profile {
+      right: 0px !important;
+    }
+
+    .close-icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 5px;
+      background-color: var(--secondary-color);
+      display: none;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      z-index: 9;
+
+      img {
+        width: 24px;
+        height: 24px;
+        object-fit: contain;
+      }
+    }
+  }
+}
+
+.mobile-only {
+  display: none;
+
+  .filter-icon {
+    width: 40px;
+    height: 40px;
+    background-color: var(--secondary-color);
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    align-content: center;
+    justify-content: center;
+
+    img {
+      width: 24px;
+      height: 24px;
+      object-fit: contain;
     }
   }
 }
