--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,6 +75,34 @@
   }
 }
 
+
+#countdown {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  ul {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+
+    li {
+      margin-inline-end: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+
+      &:last-child {
+        margin-inline-end: 0px !important;
+      }
+      
+    }
+  }
+}
+
 .general-section {
   width: 100%;
   padding: 40px 0px;
@@ -1978,6 +2006,15 @@ footer {
   &.semi-white {
     background-color: #fefefe;
   }
+
+  #countdown {
+    justify-content: flex-start;
+    margin-bottom: 20px;
+
+    ul {
+      justify-content: flex-start;
+    }
+  }
   
   .contain {
 
@@ -2121,7 +2158,7 @@ footer {
     margin: 0px !important;
     .swiper-slide{
       width: 100%;
-      height: 250px;
+      height: 280px;
       
       img{
         width: 100% !important;
