--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -257,7 +257,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99991;
+  z-index: 999;
   box-shadow: 0px 0px 10px rgba($color: #E0D4BE, $alpha: 0.4);
   transition: all .3s linear;
 
@@ -2424,6 +2424,7 @@ footer {
 }
 
 .modal.fade {
+  z-index: 99999 !important;
   transform: translateY(-10px);
   transition: all .3s linear;
 
@@ -2465,7 +2466,7 @@ footer {
       width: 49%;
       
       &:nth-child(2) {
-        border: 1px solid var(--primary-color);
+        border: 1px solid var(--primary-color) !important;
         background-color: transparent !important;
 
         span {
@@ -2853,6 +2854,89 @@ footer {
     }
   }
 
+  .button-contain {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+
+    .custom-btn {
+      width: 48%;
+      height: 35px;
+      outline: 1px solid var(--primary-color);
+      background-color: var(--light-color);
+      border-radius: 40px;
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      position: relative;
+      z-index: 9;
+      overflow: hidden;
+
+      &.large-btn {
+        width: 100% !important;
+        height: 50px !important;
+      }
+
+      span {
+        color: var(--dark-color);
+        font-size: 15px;
+        font-weight: 500;
+      }
+
+      &::after, &::before {
+        content: '';
+        position: absolute;
+        width: 50%;
+        height: 100%;
+        background-color: var(--primary-color);
+        top: 0;
+        transition: all .3s linear;
+        z-index: -1;
+      }
+
+      &::after {
+        left: 0;
+      }
+
+      &::before {
+        right: 0;
+      }
+
+      &:hover {
+        &::after, &::before {
+          width: 0%;
+        }
+
+        span {
+          animation: storm .3s linear;
+          color: var(--dark-color);
+        }
+      }
+      
+      &:nth-child(2) {
+        border: 1px solid var(--primary-color);
+        background-color: transparent !important;
+
+        span {
+          color: var(--dark-color) !important;
+        }
+        
+        &::after, &::before {
+          width: 0px;
+        }
+
+        &:hover {
+          &::after, &::before {
+            width: 55%;
+          }
+        }
+      }
+    }
+  }
+
   .tab-pane {
     width: 100%;
     height: 100%;
@@ -2861,6 +2945,10 @@ footer {
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: 0.02);
     overflow: hidden;
+
+    &.tab-data {
+      padding: 20px 25px;
+    }
 
     .contain {
       transform: translateX(-20px);
@@ -3373,6 +3461,49 @@ footer {
         font-weight: 500;
         line-height: 25px;
       }
+    }
+  }
+}
+
+.location-box {
+  width: 100%;
+  padding: 20px 10px;
+  background-color: var(--light-color);
+  border: 1px solid #eee;
+  border-radius: 10px;
+
+  &.form-check {
+    padding: 0px !important;
+    background-color: transparent !important;
+    border: 1px solid transparent !important;
+    border-radius: 0px !important;
+    text-align: start !important;
+    margin: 0px !important;
+
+    .form-check-label {
+      text-align: start !important;
+      margin: 0px !important;
+    }
+  }
+
+  h1 {
+    color: var(--dark-color);
+    font-size: 18px;
+    font-weight: 900;
+    margin-bottom: 10px;
+  }
+
+  p {
+    color: var(--gray-color);
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 10px;
+
+    span {
+      color: var(--dark-color);
+      font-size: 15px;
+      font-weight: 900;
+      margin-inline-end: 10px;
     }
   }
 }
